--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "suplementos-lp",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-css":"node-sass --include-path scss scss/style.scss css/style.css",
